--- a/requirements.txt
+++ b/requirements.txt
@@ -7,25 +7,38 @@ click==8.1.3
 colorama==0.4.4
 coverage==6.4
 cryptography==37.0.2
+dj-database-url==0.5.0
 Django==4.0.4
 django-countries==7.3.2
+django-database-url==1.0.3
 django-debug-toolbar==3.4.0
+django-environ==0.9.0
+django-heroku==0.3.1
 django-js-asset==2.0.0
 django-mptt==0.13.4
+environs==9.5.0
 flake8==4.0.1
 flake8-isort==4.1.1
+gunicorn==20.1.0
 idna==3.3
 isort==5.10.1
+marshmallow==3.16.0
 mccabe==0.6.1
 mypy-extensions==0.4.3
+packages==0.1.0
+packaging==21.3
 pathspec==0.9.0
+paypal-checkout-serversdk==1.0.1
 paypalhttp==1.0.1
 Pillow==9.1.1
 platformdirs==2.5.2
+psycopg2==2.9.3
 pycodestyle==2.8.0
 pycparser==2.21
 pyflakes==2.4.0
 pyOpenSSL==22.0.0
+pyparsing==3.0.9
+python-dotenv==0.20.0
 requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
@@ -36,4 +49,4 @@ tomli==2.0.1
 typing_extensions==4.2.0
 tzdata==2022.1
 urllib3==1.26.9
-setuptools==62.4.0
+whitenoise==6.2.0
