--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,86 @@
-asgiref==3.5.2
-black==22.3.0
-certifi==2022.5.18.1
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.1.3
-colorama==0.4.4
-coverage==6.4
-cryptography==37.0.2
-dj-database-url==0.5.0
-Django==4.0.4
-django-countries==7.3.2
-django-database-url==1.0.3
-django-debug-toolbar==3.4.0
-django-environ==0.9.0
-django-heroku==0.3.1
-django-js-asset==2.0.0
-django-mptt==0.13.4
-environs==9.5.0
-flake8==4.0.1
-flake8-isort==4.1.1
-gunicorn==20.1.0
-idna==3.3
-isort==5.10.1
-marshmallow==3.16.0
-mccabe==0.6.1
-mypy-extensions==0.4.3
-packages==0.1.0
-packaging==21.3
-pathspec==0.9.0
-paypal-checkout-serversdk==1.0.1
-paypalhttp==1.0.1
-Pillow==9.1.1
-platformdirs==2.5.2
-psycopg2==2.9.3
-psycopg2-binary==2.9.3
-pycodestyle==2.8.0
-pycparser==2.21
-pyflakes==2.4.0
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-python-dotenv==0.20.0
-requests==2.27.1
+appdirs==1.4.4
+arabic-reshaper==3.0.0
+asgiref==3.8.1
+asn1crypto==1.5.1
+attrs==23.2.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
+certifi==2024.2.2
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+cryptography==42.0.5
+cssselect==1.2.0
+cssselect2==0.7.0
+Django==5.0.3
+django-anymail==12.0
+django-countries==7.6.1
+django-debug-toolbar==4.4.6
+django-environ==0.11.2
+django-js-asset==2.2.0
+django-mptt==0.16.0
+djangorestframework==3.15.1
+dnspython==2.6.1
+fake-useragent==1.5.1
+gunicorn==23.0.0
+h11==0.14.0
+html5lib==1.1
+idna==3.6
+importlib_metadata==7.1.0
+lxml==5.2.0
+lxml_html_clean==0.1.0
+oscrypto==1.3.0
+outcome==1.3.0.post0
+packaging==24.1
+parse==1.20.1
+pillow==10.3.0
+psycopg2==2.9.10
+pycparser==2.22
+pyee==11.1.0
+pyHanko==0.23.2
+pyhanko-certvalidator==0.26.3
+pymongo==4.7.3
+pypdf==4.1.0
+pypng==0.20220715.0
+pyppeteer==2.0.0
+pyquery==2.0.0
+PySocks==1.7.1
+python-bidi==0.4.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+PyYAML==6.0.1
+qrcode==7.4.2
+reportlab==4.0.9
+requests==2.31.0
+requests-html==0.10.0
+selenium==4.23.1
+sib-api-v3-sdk==7.6.0
 six==1.16.0
-sqlparse==0.4.2
-stripe==3.2.0
-stripe3==0.0.0
-testfixtures==6.18.5
-tomli==2.0.1
-typing_extensions==4.2.0
-tzdata==2022.1
-urllib3==1.26.9
-whitenoise==6.2.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
+sqlparse==0.4.4
+stripe==11.2.0
+svglib==1.5.1
+tinycss2==1.2.1
+tqdm==4.66.2
+trio==0.26.0
+trio-websocket==0.11.1
+typing_extensions==4.10.0
+tzdata==2024.1
+tzlocal==5.2
+uritools==4.0.2
+urllib3==1.26.18
+validate-email-address==1
+vboxapi==1.0
+w3lib==2.1.2
+webdriver-manager==4.0.2
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==10.4
+whitenoise==6.8.2
+wsproto==1.2.0
+xhtml2pdf==0.2.15
+zipp==3.18.1
