--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ oscrypto==1.3.0
 outcome==1.3.0.post0
 packaging==24.1
 parse==1.20.1
+paypalrestsdk==1.13.3
 pillow==10.3.0
 psycopg2==2.9.10
 pycparser==2.22
